# home-manager

./: .gitignore  .nvim-10-todo  HOW-TO-OVERRIDE-PACKAGE.md  Makefile  README.md  TODO  binary-example.nix  build-openvino_genai.nix  default.nix  flake.nix  home.nix  index.html  meson.build  script.nix  secrets.nix.age  shell.nix  statix.toml
containers/: arion-compose.nix  custom-docker-service-example.nix  example.nix
containers/images/: redis.nix
hosts/izels-pi4/: configuration.nix
hosts/omnibook/: configuration.nix  docker-llama-cpp-run.sh  hardware-configuration.nix  intel-npu-driver.nix  services.nix
hosts/x1-carbon/: configuration.nix
modules/: alacritty.nix  build-raspberry-pi-image.nix  mako.nix  system-colors.nix
modules/functions/: replace-color-references.nix  wrap-nix-gl.nix
scripts/: my-cowsay.nix
secrets/: sample-secret.age
static/: .dprint.jsonc  .profile  .taskrc  LS_COLORS  parrots-of-paradise.yaml  task-sync
static/.config/alacritty/: alacritty.toml  alacritty.yml  alacritty.yml.bak
static/.config/gitui/: TODO  key_bindings.ron  theme.ron
static/.config/hypr/: hypridle.conf  hyprland.conf  hyprlock.conf  start.sh
static/.config/ironbar/: config.corn  style.css  todo.txt
static/.config/l-nvim/: TODO  init.lua  lazy-lock.json  snippets.vim
static/.config/lazygit/: config.yml
static/.config/mako/: config
static/.config/mutt/: muttrc
static/.task/: dark-256.theme  parrots-of-paradise.theme  solarized-light-256.theme
users/: default.nix
users/izelnakri/: default.nix
users/modules/: nix-gl.nix
(+224 files in other folders)
