project('example-project', 'c')

glib_dep = dependency('glib-2.0', required: true)
gnutls_dep = dependency('gnutls', required: true)
libcurl_dep = dependency('libcurl', required: true)
zlib_dep = dependency('zlib', required: true)
sqlite3_dep = dependency('sqlite3', required: true)
freetype2_dep = dependency('freetype2', required: true)
libpng_dep = dependency('libpng', required: true)
